--- a/mail.html
+++ b/mail.html
@@ -803,6 +803,7 @@
                                                 </tbody>
                                             </table>
                                             {{/banner}}
+                                            {{#limited}}
                                             <table class="mcnImageBlock" border="0" cellpadding="0" cellspacing="0" width="100%">
                                                 <tbody class="mcnImageBlockOuter">
                                                     <tr>
@@ -820,6 +821,7 @@
                                                     </tr>
                                                 </tbody>
                                             </table>
+                                            {{/limited}}
                                         </td>
                                     </tr>
                                 </table>
