updated map logic

--- a/mail.html
+++ b/mail.html
@@ -690,7 +690,6 @@
             display: block !important;
         }
     }
-
     @media only screen and (max-width: 480px) {
         *[desktop] {
             overflow: hidden;
@@ -988,7 +987,7 @@
                                                                                                             <!--[if gte mso 6]>
                                                                    </td>
                                                                    <td align="left" valign="top">
-                                                                   <![endif]-->
+                                                                     <![endif]-->
 
 
                                                                                                             <table align="left" border="0" cellpadding="0" cellspacing="0" class="mcnFollowStacked" style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
@@ -1016,7 +1015,7 @@
                                                                                                             <!--[if gte mso 6]>
                                                                    </td>
                                                                    <td align="left" valign="top">
-                                                                   <![endif]-->
+                                                                     <![endif]-->
 
 
                                                                                                             <table align="left" border="0" cellpadding="0" cellspacing="0" class="mcnFollowStacked" style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
@@ -1044,7 +1043,7 @@
                                                                                                             <!--[if gte mso 6]>
                                                                    </td>
                                                                    <td align="left" valign="top">
-                                                                   <![endif]-->
+                                                                     <![endif]-->
 
 
                                                                                                             <table align="left" border="0" cellpadding="0" cellspacing="0" class="mcnFollowStacked" style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
@@ -1072,7 +1071,7 @@
                                                                                                             <!--[if gte mso 6]>
                                                                    </td>
                                                                    <td align="left" valign="top">
-                                                                   <![endif]-->
+                                                                     <![endif]-->
 
                                                                                                         </td>
                                                                                                     </tr>
@@ -1149,21 +1148,15 @@
     {{#banner}}
 
     <map id="Map" name="Map">
-        <area shape="rect" coords="0, 0, 119, 46" target="_blank" href="http://rover.ebay.com/rover/1/3423-163426-1499-32/4?keyword=CategGamesWk35ActiveBuyer&mpre=http%3A%2F%2Fwww.ebay.com.sg%2Fsch%2FVideo-Games-%2F1249%2Fi.html%3F_from%3DR40%26_nkw%3DPlaystation%25204%26_udlo%3D30%26_udhi%0A" alt="Games" />
-        <area shape="rect" coords="122, 0, 211, 46" target="_blank" href="http://rover.ebay.com/rover/1/3423-163426-1499-32/4?keyword=CategToysWk35ActiveBuyer&mpre=http%3A%2F%2Fwww.ebay.com.sg%2Fsch%2FBuilding-Toys-%2F18991%2Fi.html%3F_from%3DR40%26LH_BIN%3D1%26LH_ItemCondition%3D3%26_udlo%3D5%26_udhi%3D%26_nkw%3Dlego%2BStar%2Bwars%0A" alt="Toys" />
-        <area shape="rect" coords="214, 0, 382, 46" target="_blank" href="http://rover.ebay.com/rover/1/3423-163426-1499-32/4?keyword=CategHeadphonesWk35ActiveBuyer&mpre=http%3A%2F%2Fwww.ebay.com.sg%2Fsch%2FConsumer-Electronics-%2F293%2Fi.html%3F_from%3DR40%26_sac%3D1%26_nkw%3Dsol%2Brepublic%26LH_PrefLoc%3D2%26rt%3Dnc%0A" alt="Headphones" />
-        <area shape="rect" coords="384, 0, 515, 46" target="_blank" href="http://rover.ebay.com/rover/1/3423-163426-1499-32/4?keyword=CategKitchenWk35ActiveBuyer&mpre=http%3A%2F%2Fwww.ebay.com.sg%2Fsch%2FKitchen-Dining-Bar-%2F20625%2Fi.html%3FLH_ItemCondition%3D3%26_from%3DR40%26LH_BIN%3D1%26_nkw%3Dhello%2Bkitty%2B-disney%26LH_PrefLoc%3D2%26rt%3Dnc%0A" alt="Kitchen" />
-        <area shape="rect" coords="518, 0, 641, 46" target="_blank" href="http://rover.ebay.com/rover/1/3423-163426-1499-32/4?keyword=CategCameraWk35ActiveBuyer&mpre=http%3A%2F%2Fwww.ebay.com.sg%2Fsch%2FCameras-Photo-%2F625%2Fi.html%3F_from%3DR40%26LH_BIN%3D1%26LH_ItemCondition%3D3%26_nkw%3Dinstax%0A" alt="Cameras" />
+        {{#map}}
+        <area shape="rect" coords="{{big}}" target="_blank" href="{{href}}" alt="{{title}}" />{{/map}}
     </map>
+
     <map id="MapSmall" name="MapSmall">
-        <area shape="rect" coords="0, 0, 64, 25" target="_blank" href="http://rover.ebay.com/rover/1/3423-163426-1499-32/4?keyword=CategGamesWk35ActiveBuyer&mpre=http%3A%2F%2Fwww.ebay.com.sg%2Fsch%2FVideo-Games-%2F1249%2Fi.html%3F_from%3DR40%26_nkw%3DPlaystation%25204%26_udlo%3D30%26_udhi%0A" alt="Games" />
-        <area shape="rect" coords="66, 0, 114, 25" target="_blank" href="http://rover.ebay.com/rover/1/3423-163426-1499-32/4?keyword=CategToysWk35ActiveBuyer&mpre=http%3A%2F%2Fwww.ebay.com.sg%2Fsch%2FBuilding-Toys-%2F18991%2Fi.html%3F_from%3DR40%26LH_BIN%3D1%26LH_ItemCondition%3D3%26_udlo%3D5%26_udhi%3D%26_nkw%3Dlego%2BStar%2Bwars%0A" alt="Toys" />
-        <area shape="rect" coords="116, 0, 207, 25" target="_blank" href="http://rover.ebay.com/rover/1/3423-163426-1499-32/4?keyword=CategHeadphonesWk35ActiveBuyer&mpre=http%3A%2F%2Fwww.ebay.com.sg%2Fsch%2FConsumer-Electronics-%2F293%2Fi.html%3F_from%3DR40%26_sac%3D1%26_nkw%3Dsol%2Brepublic%26LH_PrefLoc%3D2%26rt%3Dnc%0A" alt="Headphones" />
-        <area shape="rect" coords="208, 0, 280, 25" target="_blank" href="http://rover.ebay.com/rover/1/3423-163426-1499-32/4?keyword=CategKitchenWk35ActiveBuyer&mpre=http%3A%2F%2Fwww.ebay.com.sg%2Fsch%2FKitchen-Dining-Bar-%2F20625%2Fi.html%3FLH_ItemCondition%3D3%26_from%3DR40%26LH_BIN%3D1%26_nkw%3Dhello%2Bkitty%2B-disney%26LH_PrefLoc%3D2%26rt%3Dnc%0A" alt="Kitchen" />
-        <area shape="rect" coords="282, 0, 348, 25" target="_blank" href="http://rover.ebay.com/rover/1/3423-163426-1499-32/4?keyword=CategCameraWk35ActiveBuyer&mpre=http%3A%2F%2Fwww.ebay.com.sg%2Fsch%2FCameras-Photo-%2F625%2Fi.html%3F_from%3DR40%26LH_BIN%3D1%26LH_ItemCondition%3D3%26_nkw%3Dinstax%0A" alt="Cameras" />
+        {{#map}}
+        <area shape="rect" coords="{{small}}" target="_blank" href="{{href}}" alt="{{title}}" />{{/map}}
     </map>
 
     {{/banner}}
 </body>
-
 </html>
