--- a/mail.html
+++ b/mail.html
@@ -762,12 +762,12 @@
                                             <table class="mcnImageBlock" border="0" cellpadding="0" cellspacing="0" width="100%">
                                                 <tbody class="mcnImageBlockOuter">
                                                     <tr>
-                                                        <td style="padding:9px" class="mcnImageBlockInner" valign="top">
+                                                        <td style="padding-bottom:8px" class="mcnImageBlockInner" valign="top">
                                                             <table class="mcnImageContentContainer" border="0" cellpadding="0" cellspacing="0" align="left" width="100%">
                                                                 <tbody>
                                                                     <tr>
                                                                         <td class="mcnImageContent" style="padding-right: 9px; padding-left: 9px; padding-top: 0; padding-bottom: 0; text-align:center;" valign="top">
-                                                                            <a href="{{href}}" target="new">
+                                                                            <a href="{{href}}" target="_blank">
                                                                                 <img alt="ebay {{country}}" src="{{logo}}" style="max-width:242px; padding-bottom: 0; display: inline !important; vertical-align: bottom; border:0px;" class="mcnImage" align="middle" width="242">
                                                                             </a>
                                                                         </td>
@@ -782,16 +782,16 @@
                                             <table class="mcnImageBlock" border="0" cellpadding="0" cellspacing="0" width="100%">
                                                 <tbody class="mcnImageBlockOuter">
                                                     <tr>
-                                                        <td style="padding:9px" class="mcnImageBlockInner" valign="top">
+                                                        <td style="padding:0px" class="mcnImageBlockInner" valign="top">
                                                             <table class="mcnImageContentContainer" border="0" cellpadding="0" cellspacing="0" align="left" width="100%">
                                                                 <tbody>
                                                                     <tr>
-                                                                        <td align="center" class="mcnImageContent" style="padding-right: 9px; padding-left: 9px; padding-top: 0; padding-bottom: 0;" valign="top">
+                                                                        <td align="center" class="mcnImageContent" valign="top">
                                                                             <div desktop>
-                                                                                <img src="{{banner}}" alt="category tag" width="644" usemap="#Map" class="mcnImage" style="max-width:680px; padding-bottom: 0; display: inline !important; vertical-align: bottom; border:0px;" align="middle">
+                                                                                <img src="{{banner}}" alt="category tag" width="680" usemap="#Map" class="mcnImage" style="max-width:680px; padding-bottom: 0; display: inline !important; vertical-align: bottom; border:0px;" align="middle">
                                                                             </div>
                                                                             <div mobile style="mso-hide:all;display:none;max-height:0px;overflow:hidden;">
-                                                                                <img src="{{banner}}" alt="category tag" width="644" usemap="#MapSmall" class="mcnImage" style="max-width:680px; padding-bottom: 0; display: inline !important; vertical-align: bottom; border:0px;" align="middle">
+                                                                                <img src="{{banner}}" alt="category tag" usemap="#MapSmall" class="mcnImage" style="max-width:680px; padding-bottom: 0; display: inline !important; vertical-align: bottom; border:0px;" align="middle">
                                                                             </div>
                                                                         </td>
                                                                     </tr>
@@ -801,17 +801,16 @@
                                                     </tr>
                                                 </tbody>
                                             </table>
-                                            {{/banner}}
-                                            {{#limited}}
+                                            {{/banner}} {{#limited}}
                                             <table class="mcnImageBlock" border="0" cellpadding="0" cellspacing="0" width="100%">
                                                 <tbody class="mcnImageBlockOuter">
                                                     <tr>
-                                                        <td style="padding:9px" class="mcnImageBlockInner" valign="top">
+                                                        <td style="padding-top: 5px; padding-bottom: 5px" class="mcnImageBlockInner" valign="top">
                                                             <table class="mcnImageContentContainer" border="0" cellpadding="0" cellspacing="0" align="left" width="100%">
                                                                 <tbody>
                                                                     <tr>
-                                                                        <td align="center" class="mcnImageContent" style="padding-right: 9px; padding-left: 9px; padding-top: 0; padding-bottom: 0;" valign="top">
-                                                                            <img alt="Limited stock" src="{{limited}}" style="max-width:680px; padding-bottom: 0; display: inline !important; vertical-align: bottom; border:0px;" class="mcnImage" align="middle" width="644">
+                                                                        <td align="center" class="mcnImageContent" valign="top">
+                                                                            <img alt="Limited stock" src="{{limited}}" style="max-width:680px; padding-bottom: 0; display: inline !important; vertical-align: bottom; border:0px;" class="mcnImage" align="middle" width="680">
                                                                         </td>
                                                                     </tr>
                                                                 </tbody>
@@ -837,14 +836,14 @@
                                             <table class="mcnImageBlock" border="0" cellpadding="0" cellspacing="0" width="100%">
                                                 <tbody class="mcnImageBlockOuter">
                                                     <tr>
-                                                        <td style="padding:9px" class="mcnImageBlockInner" valign="top">
+                                                        <td class="mcnImageBlockInner" valign="top">
                                                             <a name="{{title}}">
-                                                                <table class="mcnImageContentContainer" border="0" cellpadding="0" cellspacing="0" align="left" width="98%">
+                                                                <table class="mcnImageContentContainer" border="0" cellpadding="0" cellspacing="0" align="left" width="100%">
                                                                     <tbody>
                                                                         <tr>
-                                                                            <td class="mcnImageContent" style="padding-right: 9px; padding-left: 9px; padding-top: 0; padding-bottom: 0; text-align:center;" valign="top">
+                                                                            <td class="mcnImageContent" style="padding-top: 0; padding-bottom: 0; text-align:center;" valign="top">
                                                                                 <a href="{{href}}" target="new">
-                                                                                    <img alt="{{title}}" src="{{src}}" style="max-width:680px; padding-bottom: 0; display: inline !important; vertical-align: bottom; border:0px;" class="mcnImage" align="middle" width="644">
+                                                                                    <img alt="{{title}}" src="{{src}}" style="max-width:680px; padding-bottom: 0; display: inline !important; vertical-align: bottom; border:0px;" class="mcnImage" align="middle" width="680">
                                                                                 </a>
                                                                             </td>
                                                                         </tr>
@@ -859,7 +858,7 @@
                                                 <tbody class="mcnImageGroupBlockOuter">
                                                     {{#rows}}
                                                     <tr>
-                                                        <td align="center" valign="top" style="padding:9px" class="mcnImageGroupBlockInner">
+                                                        <td align="center" valign="top" style="padding-left:9px;padding-right:9px" class="mcnImageGroupBlockInner">
                                                             {{#left}}
                                                             <table class="mcnImageGroupContentContainer" border="0" cellpadding="0" cellspacing="0" align="left" width="273">
                                                                 <tbody>
@@ -898,7 +897,7 @@
                                                             <table class="mcnImageContentContainer" border="0" cellpadding="0" cellspacing="0" align="left" width="100%">
                                                                 <tbody>
                                                                     <tr>
-                                                                        <td class="mcnImageContent" style="padding-right: 9px; padding-left: 9px; padding-top: 0; padding-bottom: 0;" valign="top">
+                                                                        <td class="mcnImageContent" valign="top">
                                                                             <a href="{{href}}" target="new">
                                                                                 <img alt="more button" src="http://www.ebaypowerhouse.com/portal/edm/images/2014/wk32_20140728/sg/yesmail/more_btn.png" style="max-width:680px; padding-bottom: 0; display: inline !important; vertical-align: bottom;border:0px;" class="mcnImage" align="left" width="644">
                                                                             </a>
@@ -1159,4 +1158,5 @@
 
     {{/banner}}
 </body>
+
 </html>
